<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="Music Player Settings">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="check_box_preference_3"
            android:title="Play Linearly"
            app:isPreferenceVisible="true" />
    </PreferenceCategory>
    <CheckBoxPreference
        android:defaultValue="false"
        android:dependency="check_box_preference_3"
        android:key="check_box_preference_1"
        android:summary="Enable Shuffle to pick next song randomly"
        android:title="Shuffle"
        app:isPreferenceVisible="true" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:dependency="check_box_preference_3"
        android:key="check_box_preference_2"
        android:title="Repeat"
        app:isPreferenceVisible="true" />
    <PreferenceCategory android:title="Browser Settings">

        <ListPreference
            android:defaultValue="@string/search_engine_default_value"
            android:dialogIcon="@drawable/ic_assignment_black"
            android:entries="@array/search_engine_entries"
            android:entryValues="@array/search_engine_entries"
            android:key="@string/select_search_engine_key"
            android:title="Search Engine"
            app:dialogTitle="Choose Search Engine"
            app:isPreferenceVisible="true"
            android:summary="@string/select_search_engine"/>
        <Preference
            android:key="@string/feedback_key"
            android:summary="@string/feedback_summary"
            android:title="Feedback"/>
    </PreferenceCategory>

</PreferenceScreen>
